[gd_scene load_steps=6 format=2]

[ext_resource path="res://EffectLibrary/ParticleTextures/circle_01.png" type="Texture" id=1]
[ext_resource path="res://Utility/DroppableZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character/DesireHolder.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 113.566

[sub_resource type="Animation" id=2]
resource_name = "Signal"
tracks/0/type = "value"
tracks/0/path = NodePath("../DesireHolder/GrowRing:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../DesireHolder/GrowRing:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="DesireHolder" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="GrowRing" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DroppableZone" parent="." instance=ExtResource( 2 )]
acceptedDrops = [ "Desire" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Signal = SubResource( 2 )
[connection signal="mouse_entered" from="." to="." method="_on_DesireHolder_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DesireHolder_mouse_exited"]
